// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A FieldCheckbox 1`] = `
.c3 {
  color: #262D33;
  margin-right: 0.5rem;
  font-weight: 600;
  font-size: 0.875rem;
  display: inline-block;
}

.c6 {
  position: relative;
  width: 100%;
  height: 100%;
  border: solid 1px #DEE1E5;
  border-radius: 0.125rem;
  color: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  position: relative;
  display: inline-block;
  width: 1rem;
  height: 1rem;
  margin: 3px;
  vertical-align: middle;
}

.c4 input[type='checkbox'] {
  opacity: 0;
  position: absolute;
  width: 100%;
  height: 100%;
  z-index: 1;
}

.c4 .c5 {
  background: #FFFFFF;
}

.c4 input[type='checkbox']:checked + .c5 {
  color: #fff;
  background: #0087e1;
  border-color: #0087e1;
}

.c4 input[type='checkbox']:focus + .c5 {
  box-shadow: 0 0 .5px 1px #C1C6CC;
}

.c4 input[type='checkbox']:disabled + .c5 {
  opacity: 0.5;
}

.c0 {
  margin-bottom: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

.c1 .c2 {
  text-align: right;
  width: 20%;
}

<div
  className="c0 c1 "
>
  <label
    className="c2 c3"
    color="palette.charcoal800"
    fontSize="small"
    fontWeight="semiBold"
    htmlFor="thumbs-up"
  >
    👍
  </label>
  <div
    className="c0"
  >
    <div
      className=""
    >
      <div
        className="c4 "
      >
        <input
          className=""
          id="thumbs-up"
          name="thumbsUp"
          type="checkbox"
        />
        <div
          className="c5 c6"
        >
          <svg
            fill="none"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M4 8L7 11L12 4"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`A FieldCheckbox with checked value 1`] = `
.c3 {
  color: #262D33;
  margin-right: 0.5rem;
  font-weight: 600;
  font-size: 0.875rem;
  display: inline-block;
}

.c6 {
  position: relative;
  width: 100%;
  height: 100%;
  border: solid 1px #DEE1E5;
  border-radius: 0.125rem;
  color: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  position: relative;
  display: inline-block;
  width: 1rem;
  height: 1rem;
  margin: 3px;
  vertical-align: middle;
}

.c4 input[type='checkbox'] {
  opacity: 0;
  position: absolute;
  width: 100%;
  height: 100%;
  z-index: 1;
}

.c4 .c5 {
  background: #FFFFFF;
}

.c4 input[type='checkbox']:checked + .c5 {
  color: #fff;
  background: #0087e1;
  border-color: #0087e1;
}

.c4 input[type='checkbox']:focus + .c5 {
  box-shadow: 0 0 .5px 1px #C1C6CC;
}

.c4 input[type='checkbox']:disabled + .c5 {
  opacity: 0.5;
}

.c0 {
  margin-bottom: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

.c1 .c2 {
  text-align: right;
  width: 20%;
}

<div
  className="c0 c1 "
>
  <label
    className="c2 c3"
    color="palette.charcoal800"
    fontSize="small"
    fontWeight="semiBold"
    htmlFor="thumbs-up"
  >
    👍
  </label>
  <div
    className="c0"
  >
    <div
      className=""
    >
      <div
        className="c4 "
      >
        <input
          checked={true}
          className=""
          id="thumbs-up"
          name="thumbsUp"
          type="checkbox"
        />
        <div
          className="c5 c6"
        >
          <svg
            fill="none"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M4 8L7 11L12 4"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`A required FieldCheckbox 1`] = `
.c3 {
  color: #262D33;
  margin-right: 0.5rem;
  font-weight: 600;
  font-size: 0.875rem;
  display: inline-block;
}

.c7 {
  position: relative;
  width: 100%;
  height: 100%;
  border: solid 1px #DEE1E5;
  border-radius: 0.125rem;
  color: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 {
  position: relative;
  display: inline-block;
  width: 1rem;
  height: 1rem;
  margin: 3px;
  vertical-align: middle;
}

.c5 input[type='checkbox'] {
  opacity: 0;
  position: absolute;
  width: 100%;
  height: 100%;
  z-index: 1;
}

.c5 .c6 {
  background: #FFFFFF;
}

.c5 input[type='checkbox']:checked + .c6 {
  color: #fff;
  background: #0087e1;
  border-color: #0087e1;
}

.c5 input[type='checkbox']:focus + .c6 {
  box-shadow: 0 0 .5px 1px #C1C6CC;
}

.c5 input[type='checkbox']:disabled + .c6 {
  opacity: 0.5;
}

.c0 {
  margin-bottom: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

.c4 {
  color: #990F14;
}

.c1 .c2 {
  text-align: right;
  width: 20%;
}

<div
  className="c0 c1 "
>
  <label
    className="c2 c3"
    color="palette.charcoal800"
    fontSize="small"
    fontWeight="semiBold"
    htmlFor="thumbs-up"
  >
    👍
    <span
      aria-hidden="true"
      className="c4"
    >
       
      *
    </span>
  </label>
  <div
    className="c0"
  >
    <div
      className=""
    >
      <div
        className="c5 "
      >
        <input
          className=""
          id="thumbs-up"
          name="thumbsUp"
          required={true}
          type="checkbox"
        />
        <div
          className="c6 c7"
        >
          <svg
            fill="none"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M4 8L7 11L12 4"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;
